--- a/styles.css
+++ b/styles.css
@@ -4,23 +4,36 @@ height: 100%;
 min-height: 100%;
 margin: 0;
 padding: 0;
-
+font-size: x-large;
 background-color: aquamarine;
 }
 
 header{
     background-color: rgba(110, 74, 209, 0.5);
-    margin: 0px, 0px, 0px, 0px;
+    padding-right: 5%;
     text-align: right;
     height: 75px;
 }
 
-main{
-    overflow: auto;
-    height: 100%;
+header>ul{
+    margin-bottom: 0;
+    padding-top: 10px;
+    padding-right: 5%;
 }
 
 
+main{
+    overflow: auto;
+    height: 100%;
+    margin-top: auto;
+    border: salmon;
+    box-shadow: 5%;
+}
+
+script{
+    margin: 30%;
+    padding: 30%;
+}
 
 #logo{
     float: left;
@@ -55,16 +68,25 @@ article{
     align-content: center;
     padding: 0px, 0px, 0px, 0x;
     margin: 0;
+    float: right;
+    width: 33%;
 
 }
 
 footer>ul{
     margin-bottom: 0;
     padding: 0;
+    padding-left: 5%;
 }
 
 footer{
     text-align: center;
     min-height: 75px;
+    margin-bottom: 0;
+    padding: 0;
     background-color: chocolate;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
